# zeta2d

./: .gitignore  CMakeLists.txt  README.md
Source/Samples/00/: Main.cpp  MyGame.h
Source/Zeta2D/: App.cpp  App.h  Game.h
Source/Zeta2D/Application/: App.cpp  App.h  AssetManager.h  Game.h  Manager.h  Object.h
Source/Zeta2D/Asset/: AssetManager.cpp  AssetManager.h
Source/Zeta2D/Entity/: AnimatedComponent.h  AnimationComponent.cpp  AnimationComponent.h  Component.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  PhysicsComponent.h  SpriteComponent.h  TransformComponent.h
Source/Zeta2D/Graphics/: Animation.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
src/samples/00/: main.cpp  my_game.h
src/zeta2d/: app.cpp  app.h  consts.h  game.h
src/zeta2d/entity/: component.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  transform_component.h
